add controller methods