@@ -6,15 +6,17 @@ import lombok.experimental.FieldDefaults;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 import task.tracker.api.controllers.helpers.ControllerHelper;
-import task.tracker.api.dto.ProjectDto;
+import task.tracker.api.dto.AckDto;
 import task.tracker.api.dto.TaskStateDto;
 import task.tracker.api.exception.BadRequestException;
+import task.tracker.api.exception.NotFoundException;
 import task.tracker.api.factories.TaskStateDtoFactory;
 import task.tracker.store.entities.ProjectEntity;
 import task.tracker.store.entities.TaskStateEntity;
 import task.tracker.store.repositories.TaskStateRepository;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -28,8 +30,9 @@ public class TaskStateController {
     TaskStateDtoFactory taskStateDtoFactory;
     public static final String FETCH_TASK_STATES = "/api/projects/{project_id}/task-states";
     public static final String CREATE_TASK_STATE = "/api/projects/{project_id}/task-states";
-//    public static final String CREATE_TASK_STATE = "/api/projects";
-    public static final String DELETE_PROJECT = "/api/projects/delete/{project_id}";
+    public static final String UPDATE_TASK_STATE = "/api/projects/{task_state_id}";
+    public static final String CHANGE_TASK_STATE_POSITION = "/api/task-states/{task_state_id}/position/change";
+    public static final String DELETE_TASK_STATE = "/api/task-states/{task_state_id}";
 
     @GetMapping(FETCH_TASK_STATES)
     public List<TaskStateDto> getTaskStates(
@@ -45,7 +48,7 @@ public class TaskStateController {
             @PathVariable(name = "project_id") Long projectId,
             @RequestParam(name = "task_state_name") String taskStateName) {
 
-        if (taskStateName.trim().isEmpty()) {
+        if (taskStateName.isBlank()) {
             throw new BadRequestException("Task state name can't be empty.");
         }
 
@@ -85,5 +88,142 @@ public class TaskStateController {
         final TaskStateEntity savedTaskState = taskStateRepository.saveAndFlush(taskState);
 
         return taskStateDtoFactory.makeTaskStateDto(savedTaskState);
+    }
+
+    @PatchMapping(CHANGE_TASK_STATE_POSITION)
+    public TaskStateDto changeTaskPosition(
+            @PathVariable(name = "task_state_id") Long taskStateId,
+            @RequestParam(name = "left_task_state_id") Optional<Long> optionalLeftTaskStateId) {
+
+
+        TaskStateEntity changeTaskState = getTaskStateOrThrowException(taskStateId);
+
+        ProjectEntity project = changeTaskState.getProject();
+
+        Optional<Long> oldLeftTaskStateId = changeTaskState.getLeftTaskState()
+                .map(TaskStateEntity::getId);
+        if (oldLeftTaskStateId.equals(optionalLeftTaskStateId)) {
+            return taskStateDtoFactory.makeTaskStateDto(changeTaskState);
+
+        }
+        Optional<TaskStateEntity> optionalNewLeftTaskState = optionalLeftTaskStateId
+                .map(leftTaskStateId -> {
+
+                    if (taskStateId.equals(leftTaskStateId)) {
+                        throw new BadRequestException("Left task state id equals changed task state.");
+                    }
+
+                    TaskStateEntity leftTaskStateEntity = getTaskStateOrThrowException(leftTaskStateId);
+
+                    if (!project.getId().equals(leftTaskStateEntity.getProject().getId())) {
+                        throw new BadRequestException("Task state position can be changed within the same project.");
+                    }
+                    return leftTaskStateEntity;
+
+                });
+
+        Optional<TaskStateEntity> optionalNewRightTaskState;
+        if (!optionalNewLeftTaskState.isPresent()) {
+            optionalNewRightTaskState = project.getTaskStates()
+                    .stream()
+                    .filter(anotherTaskState -> !anotherTaskState.getLeftTaskState().isPresent())
+                    .findAny();
+        } else {
+            optionalNewRightTaskState = optionalNewLeftTaskState
+                    .get()
+                    .getRightTaskState();
+        }
+
+        replaceOldTaskStatePosition(changeTaskState);
+        if (optionalNewLeftTaskState.isPresent()) {
+            TaskStateEntity newLeftTaskState = optionalNewLeftTaskState.get();
+            newLeftTaskState.setRightTaskState(changeTaskState);
+            changeTaskState.setLeftTaskState(newLeftTaskState);
+
+        } else {
+
+            changeTaskState.setRightTaskState(null);
+        }
+        if (optionalNewRightTaskState.isPresent()) {
+            TaskStateEntity newRightTaskState = optionalNewRightTaskState.get();
+            newRightTaskState.setRightTaskState(changeTaskState);
+            changeTaskState.setLeftTaskState(newRightTaskState);
+        } else {
+            changeTaskState.setRightTaskState(null);
+
+        }
+        changeTaskState = taskStateRepository.saveAndFlush(changeTaskState);
+        optionalNewRightTaskState.ifPresent(taskStateRepository::saveAndFlush);
+        optionalNewLeftTaskState.ifPresent(taskStateRepository::saveAndFlush);
+        return taskStateDtoFactory.makeTaskStateDto(changeTaskState);
+
+    }
+
+    @PatchMapping(UPDATE_TASK_STATE)
+    public TaskStateDto updateTaskState(
+            @PathVariable(name = "task_state_id") Long taskStateId,
+            @RequestParam(name = "task_state_name") String taskStateName) {
+
+        if (taskStateName.trim().isEmpty()) {
+            throw new BadRequestException("Task state name can't be empty.");
+        }
+
+        TaskStateEntity taskState = getTaskStateOrThrowException(taskStateId);
+
+        taskStateRepository
+                .findTaskStateEntityByProjectIdAndNameContainsIgnoreCase(
+                        taskState.getProject().getId(),
+                        taskStateName
+                )
+                .filter(anotherTaskState -> !anotherTaskState.getId().equals(taskStateId))
+                .ifPresent(anotherTaskState -> {
+                    throw new BadRequestException(String.format("Task state \"%s\" already exists.", taskStateName));
+                });
+
+        taskState.setName(taskStateName);
+
+        taskState = taskStateRepository.saveAndFlush(taskState);
+
+        return taskStateDtoFactory.makeTaskStateDto(taskState);
+    }
+
+    @DeleteMapping(DELETE_TASK_STATE)
+    public AckDto deleteTaskState(@PathVariable(name = "task_state_id") Long taskStateId) {
+
+        TaskStateEntity changeTaskState = getTaskStateOrThrowException(taskStateId);
+
+        replaceOldTaskStatePosition(changeTaskState);
+
+        taskStateRepository.delete(changeTaskState);
+
+        return AckDto.builder().answer(true).build();
+    }
+
+
+    private void replaceOldTaskStatePosition(TaskStateEntity changeTaskState) {
+
+        Optional<TaskStateEntity> optionalOldLeftTaskState = changeTaskState.getLeftTaskState();
+        Optional<TaskStateEntity> optionalOldRightTaskState = changeTaskState.getRightTaskState();
+
+        optionalOldLeftTaskState
+                .ifPresent(it -> {
+
+                    it.setRightTaskState(optionalOldRightTaskState.orElse(null));
+
+                    taskStateRepository.saveAndFlush(it);
+                });
+
+        optionalOldRightTaskState
+                .ifPresent(it -> {
+
+                    it.setLeftTaskState(optionalOldLeftTaskState.orElse(null));
+
+                    taskStateRepository.saveAndFlush(it);
+                });
+    }
+    private TaskStateEntity getTaskStateOrThrowException(Long taskStateId) {
+        return taskStateRepository
+                .findById(taskStateId)
+                .orElseThrow(() -> new NotFoundException(String.format("Task state with \"%s\" id doesn't exist", taskStateId)));
     }
 }
